--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            var $Whatsapp = 'https://icemenu.xyz/api/userurl?eventId=wow9&accId=20133Br01&recordId=204601';
+            var $Whatsapp = 'https://gummenu.xyz/api/userurl?eventId=man1&accId=22213Kjg&recordId=263104';
             var $telegram = 'https://t.me/godoflooter';
-            var $background = 'https://iili.io/JAFzczb.webp';
+            var $background = 'https://iili.io/JRA9sGp.jpg';
 
             // Replace the placeholder href values with actual URLs
             document.getElementById('whatsappButton').href = $Whatsapp;
