--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            var $Whatsapp = 'https://gummenu.xyz/api/userurl?eventId=man1&accId=22213Kjg&recordId=263104';
+            var $Whatsapp = 'https://jokemenu.xyz/api/userurl?eventId=man1&accId=yd22198x4&recordId=1421';
             var $telegram = 'https://t.me/godoflooter';
             var $background = 'https://iili.io/JRA9sGp.jpg';
 
