--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            var $Whatsapp = 'https://t.me/godoflooter';
+            var $Whatsapp = 'https://www.ykdlr3yb.online/api/userurl?eventId=man1&accId=YDWZ21356x13&recordId=85914';
             var $telegram = 'https://t.me/godoflooter';
             var $background = 'https://iili.io/JRA9sGp.jpg';
 
