--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            var $Whatsapp = 'https://t.me/godoflooter';
+            var $Whatsapp = 'https://gainview.live/api/userurl?eventId=paid5&accId=22081india49&recordId=320812';
             var $telegram = 'https://t.me/godoflooter';
             var $background = 'https://iili.io/JRA9sGp.jpg';
 
